[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/main/LauncherMain.gd" type="Script" id=1]
[ext_resource path="res://assets/launcher/fonts/Monocraft.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/launcher/fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/launcher/btn/dwl_update/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/launcher/btn/dwl_update/pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/launcher/btn/dwl_update/disables.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/launcher/btn/dwl_update/normal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/launcher/btn/df_PS2P.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/launcher/btn/play/normal.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/launcher/btn/play/pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/launcher/btn/play/disables.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/launcher/btn/play/hover.tres" type="StyleBox" id=12]
[ext_resource path="res://assets/launcher/progress_bar/progress.png" type="Texture" id=13]
[ext_resource path="res://assets/launcher/progress_bar/under.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.0784314, 0.0901961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="LauncherMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Main" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Main/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 575.0
custom_constants/separation = 10

[node name="Panel" type="Panel" parent="Main/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Main/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 529.0
margin_right = 1004.0
margin_bottom = 565.0
custom_constants/separation = 10

[node name="DWLUpdateBTN" type="Button" parent="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 328.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "DOWNLOAD"

[node name="PlayBTN" type="Button" parent="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 666.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
text = "PLAY"

[node name="RDWLBTN" type="Button" parent="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 1004.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "REDOWNLOAD"

[node name="ProgressBar" type="TextureProgress" parent="Main/VBoxContainer"]
margin_top = 585.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
step = 0.1
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 13 )
nine_patch_stretch = true

[node name="Error" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Error"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Error/CenterContainer"]
margin_left = 362.0
margin_top = 253.0
margin_right = 662.0
margin_bottom = 346.0
custom_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Error/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 0 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#f05b56][shake rate=15 level=15][center]ERR0R[/center][/shake][/color]"
text = "ERR0R"
fit_content_height = true

[node name="ErrorLabel" type="Label" parent="Error/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 3 )
text = "Error Message"
align = 1
valign = 1
autowrap = true

[node name="Networking" type="Node" parent="."]

[node name="DwlHTTPReq" type="HTTPRequest" parent="Networking"]
use_threads = true

[connection signal="pressed" from="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/DWLUpdateBTN" to="." method="_on_DWLUpdateBTN_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayBTN" to="." method="_on_PlayBTN_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/RDWLBTN" to="." method="_on_RDWLBTN_pressed"]
[connection signal="request_completed" from="Networking/DwlHTTPReq" to="." method="_on_DwlHTTPReq_completed"]
